tests/rosetta/out/C/arithmetic-complex.error
cc: exit status 1
/tmp/arithmetic-complex.c:60:11: warning: conflicting types for built-in function ‘conj’; expected ‘_Complex double(_Complex double)’ [-Wbuiltin-declaration-mismatch]
   60 | complex_t conj(complex_t *a) {
      |           ^~~~
/tmp/arithmetic-complex.c:6:1: note: ‘conj’ is declared in header ‘<complex.h>’
    5 | #include <string.h>
  +++ |+#include <complex.h>
    6 | 
/tmp/arithmetic-complex.c: In function ‘_mochi_main’:
/tmp/arithmetic-complex.c:86:30: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   86 |   printf("%s\n", "a:       " + cstr(&a));
      |                  ~~~~~~~~~~~ ^ ~~~~~~~~
      |                  |             |
      |                  char *        char *
/tmp/arithmetic-complex.c:87:30: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   87 |   printf("%s\n", "b:       " + cstr(&b));
      |                  ~~~~~~~~~~~ ^ ~~~~~~~~
      |                  |             |
      |                  char *        char *
/tmp/arithmetic-complex.c:88:37: error: lvalue required as unary ‘&’ operand
   88 |   printf("%s\n", "a + b:   " + cstr(&add(&a, &b)));
      |                                     ^
/tmp/arithmetic-complex.c:89:37: error: lvalue required as unary ‘&’ operand
   89 |   printf("%s\n", "a * b:   " + cstr(&mul(&a, &b)));
      |                                     ^
/tmp/arithmetic-complex.c:90:37: error: lvalue required as unary ‘&’ operand
   90 |   printf("%s\n", "-a:      " + cstr(&neg(&a)));
      |                                     ^
/tmp/arithmetic-complex.c:91:37: error: lvalue required as unary ‘&’ operand
   91 |   printf("%s\n", "1 / a:   " + cstr(&inv(&a)));
      |                                     ^
/tmp/arithmetic-complex.c:92:37: error: lvalue required as unary ‘&’ operand
   92 |   printf("%s\n", "a̅:       " + cstr(&conj(&a)));
      |                                     ^
